Release 1.10